integration_tests/codegen_fail/fail/object/impl_fields_unique.rs
struct Object {}

#[juniper::graphql_object]
impl Object {
    async fn test(&self) -> String {
        String::new()
    }

    async fn test(&self) -> String {
        String::new()
    }
}

fn main() {}
