integration_tests/codegen_fail/fail/object/impl_fields_unique.stderr
error: GraphQL object must have a different name for each field
 --> $DIR/impl_fields_unique.rs:4:6
  |
4 | impl Object {
  |      ^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Objects
